[package]
name = "redis-streams"
description = "Redis streams commands"
version = "0.1.1"
authors = ["Greg Melton <gmelton@gmail.com>"]
readme = "README.md"
keywords = ["redis", "streams", "database"]
repository = "https://github.com/grippy/redis-streams-rs.git"
# documentation = ""
categories = []
license = "MIT"
edition = "2018"

[lib]
name = "redis_streams"
path = "src/lib.rs"

[dependencies]
redis = "0.16.0"

[dev-dependencies]
rand = "0.7.3"
net2 = "0.2.34"
futures = "0.3.5"
